@@ -4,6 +4,7 @@ DESTDIR=
 libdir=/usr/lib
 bindir=/usr/bin
 sbindir=/usr/sbin
+rootsbindir=/sbin
 desktopdir=/usr/share/applications
 autostartdir=/usr/share/autostart
 xinitdir=/etc/X11/xinit.d
@@ -12,6 +13,7 @@ pixmapsdir=/usr/share/libDrakX/pixmaps
 
 BIN_TOOLS= 
 SBIN_TOOLS= keyboarddrake mousedrake XFdrake
+ROOTSBIN_TOOLS = display_driver_helper
 INLIBDEST_DIRS = lib/xf86misc
 
 all: $(INLIBDEST_DIRS)
@@ -21,10 +23,10 @@ all: $(INLIBDEST_DIRS)
 
 check:
 	@for p in `find lib -name *.pm`; do perl -cw -I$(libdir)/libDrakX $$p || exit 1; done
-	@for p in tools/*; do perl -cw $$p || exit 1; done
+	@for p in tools/*; do head -n1 $$p | grep perl || continue; perl -cw $$p || exit 1; done
 
 install:
-	install -d $(DESTDIR){$(libdir),$(bindir),$(sbindir),$(desktopdir),$(autostartdir),$(xinitdir),$(iconsdir),$(pixmapsdir)}
+	install -d $(DESTDIR){$(libdir),$(bindir),$(sbindir),$(rootsbindir),$(desktopdir),$(autostartdir),$(xinitdir),$(iconsdir),$(pixmapsdir)}
 
 	install -d $(INLIBDEST_DIRS:%=$(DESTDIR)$(libdir)/libDrakX//%)
 	cp -a lib/*.pm $(DESTDIR)$(libdir)/libDrakX/
@@ -34,6 +36,7 @@ install:
 	(cd lib; for i in */; do install -d $(DESTDIR)$(libdir)/libDrakX/$$i ; install -m 644 $$i/*.pm $(DESTDIR)$(libdir)/libDrakX/$$i/;done)
 	(cd tools; \
 	  [[ -n "$(BIN_TOOLS)" ]] && install -m755 $(BIN_TOOLS) $(DESTDIR)$(bindir); \
+	  [[ -n "$(ROOTSBIN_TOOLS)" ]] && install -m755 $(ROOTSBIN_TOOLS) $(DESTDIR)$(rootsbindir); \
 	  install -m755 $(SBIN_TOOLS) $(DESTDIR)$(sbindir); \
 	)
 	#install -m644 $(wildcard data/*.desktop) $(DESTDIR)$(desktopdir)
